hphp/hack/test/typecheck/coeffects/ctx_const_constraints.php
<?hh

abstract class C {
  abstract const ctx C as [];
  abstract const ctx C1 super [defaults];
  const ctx C2 as [] = [];
}
